--- a/Stable_Diffusion_XL_Demo.ipynb
+++ b/Stable_Diffusion_XL_Demo.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "Refiner is disabled by default due to a lack of system memory in the free tier of Colab. You can enable it by setting `ENABLE_REFINER=true`.\n",
         "\n",
-        "Support this demo by giving the repo a star: https://github.com/TonyLianLong/stable-diffusion-xl-demo"
+        "Support this demo by giving the repo a star: "
       ]
     },
     {
@@ -144,7 +144,7 @@
         }
       ],
       "source": [
-        "!git clone https://github.com/TonyLianLong/stable-diffusion-xl-demo\n",
+        "!git clone https://github.com/helenristov/SDXL_Gradio_Demo \n",
         "%cd stable-diffusion-xl-demo\n",
         "\n",
         "!pip install -r requirements.txt"
